Recipe Page Content

--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -6,10 +6,27 @@
   </head>
   <body>
     <h1>Fried Rice</h1>
-
-
+    <img src="images/friedrice.jpg" alt="An image of a fried rice dish">
+    <h2>Description</h2>
+    <p>An authentic thai fried rice with egg, kale and chicken.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>150g chicken</li>
+      <li>1 tsp Golden Mountain Sauce or soy sauce</li>
+      <li>0.5 tsp sugar</li>
+      <li>3-4 cloves garlic</li>
+      <li>1 small onion</li>
+      <li>2 leaves kale</li>
+      <li>2 eggs</li>
+      <li>350g cooked jasmine rice</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Combine chicken with Golden Mountain Sauce and sugar; set aside.</li>
+      <li>Add marinated chicken to a pan and cook until done; set aside.</li>
+      <li>Add vegetables to the same pan and cook for a few minutes.</li>
+      <li>Add eggs, break the yolks, and let the egg set about half way then scramble briefly</li>
+      <li>Add rice and toss briefly, breaking up big lumps with the back of your spatula.</li>
+    </ol>
   </body>
-
-
-
 </html>
