Add recipe ginger soy chicken

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Odin Recipes</h1>
     
     <a href="recipes/friedrice.html">Fried Rice</a>
+
+    <a href="recipes/ginger-soy-chicken.html">Ginger Soy Chicken</a>
   </body>
 
 
