Add recipe thai-style chicken stock

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    
-    <a href="recipes/friedrice.html">Fried Rice</a>
+    <ul>
+      <li>
+        <a href="recipes/fried-rice.html">Fried Rice</a>
+      </li>
+      <li>
+        <a href="recipes/ginger-soy-chicken.html">Ginger Soy Chicken</a>
+      </li>
+      <li>
+        <a href="recipes/thai-chicken-stock.html">Thai-Style Chicken Stock</a>
+      </li>
+    </ul>
 
-    <a href="recipes/ginger-soy-chicken.html">Ginger Soy Chicken</a>
   </body>
 
 
