--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Fried Rice</h1>
-    <img src="images/friedrice.jpg" alt="An image of a fried rice dish">
+    <img src="images/fried-rice.jpg" alt="An image of a fried rice dish">
     <h2>Description</h2>
-    <p>An authentic thai fried rice with egg, kale and chicken.</p>
+    <p>An authentic thai recipe for fried rice with egg, kale and chicken.</p>
     <h2>Ingredients</h2>
     <ul>
       <li>150g chicken</li>
