--- a/recipes/ginger-soy-chicken.html
+++ b/recipes/ginger-soy-chicken.html
@@ -8,7 +8,7 @@
     <h1>Ginger Soy Chicken</h1>
     <img src="images/ginger-soy-chicken.jpg" alt="An image of ginger soy chicken dish">
     <h2>Description</h2>
-    <p>An authentic thai ginger soy chicken dish.</p>
+    <p>An authentic thai recipe for ginger soy chicken.</p>
     <h2>Ingredients</h2>
     <ul>
       <li>500g chicken thigh, cut into 1.5” cubes</li>
